@@ -3,7 +3,7 @@ requires "Class::Usul" => "v0.44.0";
 requires "Crypt::Eksblowfish" => "0.009";
 requires "Daemon::Control" => "0.000009";
 requires "Exporter::Tiny" => "0.026";
-requires "File::DataClass" => "v0.42.0";
+requires "File::DataClass" => "v0.43.0";
 requires "HTML::Accessors" => "v0.11.0";
 requires "HTTP::Body" => "1.11";
 requires "HTTP::Message" => "6.06";
