@@ -9,7 +9,7 @@ Class::Usul       = v0.44.0
 Crypt::Eksblowfish = 0.009
 Daemon::Control   = 0.000009
 Exporter::Tiny    = 0.026
-File::DataClass   = v0.42.0
+File::DataClass   = v0.43.0
 HTML::Accessors   = v0.11.0
 HTTP::Body        = 1.11
 HTTP::Message     = 6.06
